--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Restaurant</title>
+	<link rel="stylesheet" href="css\style.css">
 </head>
 <body>
-
+	<h1>Today's Menu</h1>
+	<section class="size1">
+		<h2 class="corner" id="food1">Breakfast</h2>
+		<p>Cereal, Eggs, Pancakes, Bacon, Waffles, Fruit</p>
+	</section>
+	<section class="size2">
+		<h2 class="corner" id="food2">Lunch</h2>
+		<p>Sandwich, Burger, Tacos, Pizza, Salad</p>
+	</section>
+	<section class="size3">
+		<h2 class="corner" id="food3">Dinner</h2>
+		<p>Soup, Steak, Lasagna, Enchiladas, Fajitas</p>
+	</section>
 </body>
 </html>
