--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
 	<h1>Today's Menu</h1>
 	<section class="size1">
-		<h2 class="corner" id="food1">Breakfast</h2>
-		<p>Cereal, Eggs, Pancakes, Bacon, Waffles, Fruit</p>
+		<h2 class="corner" id="yellow">Breakfast</h2>
+		<p>Food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food</p>
 	</section>
 	<section class="size2">
-		<h2 class="corner" id="food2">Lunch</h2>
-		<p>Sandwich, Burger, Tacos, Pizza, Salad</p>
+		<h2 class="corner" id="blue">Lunch</h2>
+		<p>Food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food</p>
 	</section>
 	<section class="size3">
-		<h2 class="corner" id="food3">Dinner</h2>
-		<p>Soup, Steak, Lasagna, Enchiladas, Fajitas</p>
+		<h2 class="corner" id="red">Dinner</h2>
+		<p>Food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food</p>
 	</section>
 </body>
 </html>
