--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
 	<h1>Today's Menu</h1>
 	<section class="size1">
-		<h2 class="corner" id="yellow">Breakfast</h2>
+		<h2 id="yellow">Breakfast</h2>
 		<p>Food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food</p>
 	</section>
 	<section class="size2">
-		<h2 class="corner" id="blue">Lunch</h2>
+		<h2 id="blue">Lunch</h2>
 		<p>Food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food</p>
 	</section>
 	<section class="size3">
-		<h2 class="corner" id="red">Dinner</h2>
+		<h2 id="red">Dinner</h2>
 		<p>Food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food, food</p>
 	</section>
 </body>
